@@ -78,7 +78,7 @@ class DataFunctionTrampoline3 : public Trampoline3 <R0, A1, A2, A3> {
     const DataFunctionTrampoline3 *other = dynamic_cast<const DataFunctionTrampoline3*> (&bother);
     return other and other->callback == callback and other->data == data; }
 public:
-  DataFunctionTrampoline3 (Callback c, const Data &d) :
+  DataFunctionTrampoline3 (Callback c, const Data d) :
     callback (c), data (d)
   {}
 };
@@ -95,7 +95,7 @@ class DataMethodTrampoline3 : public Trampoline3 <R0, A1, A2, A3>, public virtua
   virtual      ~DataMethodTrampoline3()                 { deletable_remove_hook (instance); }
   virtual void deletable_dispose (Deletable &deletable) { instance = NULL; this->callable = false; }
 public:
-  DataMethodTrampoline3 (Class &obj, Method m, const Data &d) :
+  DataMethodTrampoline3 (Class &obj, Method m, const Data d) :
     instance (&obj), method (m), data (d)               { deletable_add_hook (instance); }
 };
 
@@ -113,9 +113,14 @@ slot (R0 (*callback) (A1, A2, A3))
   return Slot3<R0, A1, A2, A3> (new FunctionTrampoline3<R0, A1, A2, A3> (callback));
 }
 template<typename R0, typename A1, typename A2, typename A3, typename Data> Slot3<R0, A1, A2, A3>
-slot (R0 (*callback) (A1, A2, A3, Data), const Data &data)
+slot (R0 (*callback) (A1, A2, A3, Data), const Data data)
 {
   return Slot3<R0, A1, A2, A3> (new DataFunctionTrampoline3<R0, A1, A2, A3, Data> (callback, data));
+}
+template<typename R0, typename A1, typename A2, typename A3, typename Data> Slot3<R0, A1, A2, A3>
+slot (R0 (*callback) (A1, A2, A3, Data&), Data &data)
+{
+  return Slot3<R0, A1, A2, A3> (new DataFunctionTrampoline3<R0, A1, A2, A3, Data&> (callback, data));
 }
 template<class Class, typename R0, typename A1, typename A2, typename A3> Slot3<R0, A1, A2, A3>
 slot (Class &obj, R0 (Class::*method) (A1, A2, A3))
@@ -123,9 +128,14 @@ slot (Class &obj, R0 (Class::*method) (A1, A2, A3))
   return Slot3<R0, A1, A2, A3> (new MethodTrampoline3<Class, R0, A1, A2, A3> (obj, method));
 }
 template<class Class, typename R0, typename A1, typename A2, typename A3, typename Data> Slot3<R0, A1, A2, A3>
-slot (Class &obj, R0 (Class::*method) (A1, A2, A3, Data), const Data &data)
+slot (Class &obj, R0 (Class::*method) (A1, A2, A3, Data), const Data data)
 {
   return Slot3<R0, A1, A2, A3> (new DataMethodTrampoline3<Class, R0, A1, A2, A3, Data> (obj, method, data));
+}
+template<class Class, typename R0, typename A1, typename A2, typename A3, typename Data> Slot3<R0, A1, A2, A3>
+slot (Class &obj, R0 (Class::*method) (A1, A2, A3, Data&), Data &data)
+{
+  return Slot3<R0, A1, A2, A3> (new DataMethodTrampoline3<Class, R0, A1, A2, A3, Data&> (obj, method, data));
 }
 template<typename Obj, typename R0, typename A1, typename A2, typename A3> Slot3<R0, A1, A2, A3>
 slot (Signal<Obj, R0 (A1, A2, A3)> &sigref)
