@@ -88,6 +88,13 @@ struct EmitterMany {
             __func__, a1, a2, a3, a4, a5, a6, a7, a8, a9, a10, a11, a12, a13, a14, x.message());
     return __func__;
   }
+  static String test_string_14_refdata (int a1, double a2, int a3, double a4, int a5, double a6, int a7, double a8, int a9,
+                                        double a10, int a11, double a12, int a13, double a14, ExtraType &xref)
+  {
+    TPRINT ("  callback: %s (%d, %.1f, %d, %.1f, %d, %.1f, %d, %.1f, %d, %.1f, %d, %.1f, %d, %.1f, %s);\n",
+            __func__, a1, a2, a3, a4, a5, a6, a7, a8, a9, a10, a11, a12, a13, a14, xref.message());
+    return __func__;
+  }
   void testme ()
   {
     TSTART ("Signals, multi-arg");
@@ -108,9 +115,10 @@ struct EmitterMany {
     sig_void_14.emit (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14);
     sig_void_15.emit (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15);
     sig_void_16.emit (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16);
-    ExtraType xt;
+    ExtraType xt, &xref = xt;
     sig_string_14 += slot (test_string_14_emitter_data, xt);
     sig_string_14 += slot (test_string_14_data, xt);
+    sig_string_14 += slot (test_string_14_refdata, xref);
     String results;
     results += sig_string_0.emit ();
     results += sig_string_1.emit (1);
